@@ -1,3 +1,12 @@
+2002-05-24 15:34 UTC+0100  Dave Pearson  <davep@davep.org>
+
+	* xbase.el (xbase-end-of-defun): Renamed `defunp' to `is-defun-p'
+	so as to work around a bug in emacs' Common Lisp indentation
+	engine (no, this doesn't have aanything to do with `xbase-mode',
+	but it stops xbase.el being badly formatted). See
+	<URL:http://mail.gnu.org/pipermail/bug-gnu-emacs/2002-May/012763.html>
+	my report to the emacs developers.
+	
 2002-05-24 10:45 UTC+0100  Dave Pearson  <davep@davep.org>
 
 	* xbase.el (xbase-end-of-defun): Improved the doc-string.
